[gd_scene load_steps=4 format=3 uid="uid://bxr3nedsniuk7"]

[ext_resource type="Script" path="res://code/main_menu.gd" id="1_l6nmu"]
[ext_resource type="Texture2D" uid="uid://dnlfieapthqw7" path="res://assets/INCHAINITYlogo.png" id="2_7xdvu"]
[ext_resource type="AudioStream" uid="uid://du4r2p45egt4o" path="res://audio/ChainsMenuLoopv1 (1).wav" id="3_ptavu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_l6nmu")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 31.0
offset_top = -310.0
offset_right = 1631.0
offset_bottom = 1290.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_7xdvu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 369.0
offset_right = 542.0
offset_bottom = 470.0
scale = Vector2(2.34516, 1.99469)

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../HowToPlay")
text = "Play
"

[node name="HowToPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_next = NodePath("../QuitButton")
focus_previous = NodePath(".")
text = "How To Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_previous = NodePath("../HowToPlay")
text = "Quit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ptavu")
autoplay = true

[connection signal="button_down" from="VBoxContainer/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="VBoxContainer/HowToPlay" to="." method="_on_how_to_play_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
